Fix spacing in Project page

--- a/src/pages/Project/project.module.css
+++ b/src/pages/Project/project.module.css
@@ -26,7 +26,7 @@
   text-align: center;
 }
 
-#github {
+#github, #webpage {
   display: flex;
   flex-direction: column;
   gap: 40px;
